--- a/Pipfile
+++ b/Pipfile
@@ -9,7 +9,7 @@ kaggle = "*"
 [packages]
 absl-py = "==0.7.0"
 astor = "==0.7.1"
-click = "==7.0"
+click = "<7.0.0"
 gast = "==0.2.2"
 grpcio = "==1.18.0"
 gunicorn = "==19.9.0"
@@ -37,6 +37,7 @@ MarkupSafe = "==1.1.0"
 PyYAML = "==4.2b4"
 Werkzeug = "==0.14.1"
 WTForms = "==2.2.1"
+textgenrnn = "*"
 
 [requires]
 python_version = "3.6"
